--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>FifthAppWeatherAppApi</title>
-  <base href="/">
+  <base href="https://j7devweb.github.io/App-Meteo/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 <link rel="stylesheet" href="styles.9f1b696b41b1927e0932.css"></head>
